<resources>
    <string name="app_name">Tarkhineh</string>

    <string name="head1">سفارش آسان غذا با چند کلیک</string>
    <string name="desc1">با اپلیکیشن ترخینه می‌تونی در عرض چند ثانیه و با چند کلیک به\n راحتی سفارش خودت رو ثبت کنی.</string>

    <string name="head2">ارسال سریع سفارشات</string>
    <string name="desc2">حداکثر زمان تحویل غذا در ترخینه ۴۵ دقیقه است که این زمان \n بسته به آدرست میتونه کمتر هم بشه!</string>

    <string name="head3">تجربه غذای سالم و گیاهی</string>
    <string name="desc3">تموم غذاهای ترخینه با محصولات کشاورزی کاملا سالم و ارگانیک \n تهیه می‌شن تا بهترین تجربه رو بهت هدیه بدن.</string>


    <string name="register">ورود / ثبت نام</string>
    <string name="enteNumber">شماره همراه خود را وارد کنید</string>
    <string name="phoneNumber">شماره همراه</string>
    <string name="send_code">ارسال کد</string>
    <string name="privacy_text">من قوانین و مقررات ارائه خدمات توسط ترخینه را می‌پذیرم…</string>

    <string name="CD_nextBtn">next Button</string>
    <string name="CD_character">this is a normal character that doing nothing</string>
    <string name="DC_login_logo">this is applictions icon</string>
    <string name="verify_cde">کد تائید</string>
    <string name="verify_code_desc">کد تایید پنج رقمی به شماره %s ارسال شد.</string>
    <string name="CD_clock_logo">this is click logo</string>
    <string name="countDown">تا دریافت مجدد کد</string>
    <string name="edit_number">ویرایش شماره</string>
    <string name="Login">ورود</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">اطلاعات حساب کاربری</string>
    <string name="CD_username">this is username</string>
    <string name="favorite">علاقمندی‌ها</string>
    <string name="CD_favorite">this is favorite</string>
    <string name="locations">آدرس‌ها</string>
    <string name="CD_locations">this is locations</string>
    <string name="FAQs">سوالات متداول</string>
    <string name="CD_faqs">this is FAQs</string>
    <string name="privacy">قوانین</string>
    <string name="CD_privacy">this is privacy</string>
    <string name="about">تماس با ما</string>
    <string name="CD_about">this is about</string>
    <string name="logout">خروج</string>
    <string name="CD_logout">this is logout</string>
    <string name="CD_profile">this is user profile</string>
    <string name="profile_name">کاربر ترخینه</string>
    <string name="title_special_offer">پیشنهاد ویژه</string>
    <string name="CD_foodImage">this is foods image</string>
    <string name="food_name">اسم عذا</string>
    <string name="food_discount">%8</string>
    <string name="food_dis_sum">۲۰۰.۰۰۰</string>
    <string name="food_price">240.000 تومان</string>
    <string name="CD_addToFavorite">click this to add this food into your favorite section</string>
    <string name="food_star">5</string>
    <string name="star_img">star img</string>
    <string name="add_to_shopping_card">افزدون به سبد خرید</string>
    <string name="popular_food">غذاهای محبوب</string>
    <string name="non_persian_food">غذاهای غیر ایرانی</string>
    <string name="toolbar_menu_title">منوی رستوران</string>
    <string name="sample_for_food_sesc">این یک متن تست برای توضیحات عذا است</string>
    <string name="detail_food">جزئیات محصول</string>
    <string name="CD_shoping_card">this is shoping card</string>

</resources>