<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/onBoarding_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/estedad_bold"
        android:text="@string/head1"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/onBoarding_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/estedad_medium"
        android:text="@string/desc1"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/onBoarding_char"
        android:layout_width="640dp"
        android:layout_height="240dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/CD_character"
        android:src="@drawable/character1" />

</LinearLayout>