<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@color/Primary">

            <ImageView
                android:id="@+id/user_profile"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/CD_profile" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="67dp"
                android:layout_height="25dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/estedad_medium"
                android:text="@string/profile_name"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/user_profile"
                app:layout_constraintStart_toStartOf="@+id/user_profile"
                app:layout_constraintTop_toBottomOf="@+id/user_profile" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/user_information"
                android:layout_width="320dp"
                android:layout_height="25dp"
                android:layout_marginTop="24dp"
                android:gravity="center_vertical|right"
                android:orientation="horizontal"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlHardcoded,UseCompoundDrawables">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:fontFamily="@font/estedad_medium"
                    android:gravity="center"
                    android:text="@string/username"
                    android:textColor="@color/Gray_8"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/user"
                    app:tint="@color/Gray_8"
                    android:layout_marginStart="4dp"
                    android:contentDescription="@string/CD_username" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/user_favorite"
                android:layout_width="320dp"
                android:layout_height="25dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical|right"
                android:orientation="horizontal"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_information"
                tools:ignore="RtlHardcoded,UseCompoundDrawables">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:fontFamily="@font/estedad_medium"
                    android:gravity="center"
                    android:text="@string/favorite"
                    android:textColor="@color/Gray_8"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/heart"
                    app:tint="@color/Gray_8"
                    android:layout_marginStart="4dp"
                    android:contentDescription="@string/CD_favorite" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/user_locations"
                android:layout_width="320dp"
                android:layout_height="25dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical|right"
                android:orientation="horizontal"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_favorite"
                tools:ignore="RtlHardcoded,UseCompoundDrawables">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:fontFamily="@font/estedad_medium"
                    android:gravity="center"
                    android:text="@string/locations"
                    android:textColor="@color/Gray_8"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/location"
                    app:tint="@color/Gray_8"
                    android:layout_marginStart="4dp"
                    android:contentDescription="@string/CD_locations" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/app_faqs"
                android:layout_width="320dp"
                android:layout_height="25dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical|right"
                android:orientation="horizontal"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_locations"
                tools:ignore="RtlHardcoded,UseCompoundDrawables">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:fontFamily="@font/estedad_medium"
                    android:gravity="center"
                    android:text="@string/FAQs"
                    android:textColor="@color/Gray_8"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/message_question"
                    app:tint="@color/Gray_8"
                    android:layout_marginStart="4dp"
                    android:contentDescription="@string/CD_faqs" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/app_privacy"
                android:layout_width="320dp"
                android:layout_height="25dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical|right"
                android:orientation="horizontal"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/app_faqs"
                tools:ignore="RtlHardcoded,UseCompoundDrawables">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:fontFamily="@font/estedad_medium"
                    android:gravity="center"
                    android:text="@string/privacy"
                    android:textColor="@color/Gray_8"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/info"
                    app:tint="@color/Gray_8"
                    android:layout_marginStart="4dp"
                    android:contentDescription="@string/CD_privacy" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/app_calling"
                android:layout_width="320dp"
                android:layout_height="25dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical|right"
                android:orientation="horizontal"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/app_privacy"
                tools:ignore="RtlHardcoded,UseCompoundDrawables">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:fontFamily="@font/estedad_medium"
                    android:gravity="center"
                    android:text="@string/about"
                    android:textColor="@color/Gray_8"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/phone"
                    app:tint="@color/Gray_8"
                    android:layout_marginStart="4dp"
                    android:contentDescription="@string/CD_about" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/app_logout"
                android:layout_width="320dp"
                android:layout_height="25dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical|right"
                android:orientation="horizontal"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/app_calling"
                tools:ignore="RtlHardcoded,UseCompoundDrawables">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:fontFamily="@font/estedad_medium"
                    android:gravity="center"
                    android:text="@string/logout"
                    android:textColor="@color/Error"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/logout"
                    android:layout_marginStart="4dp"
                    android:contentDescription="@string/CD_logout" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</FrameLayout>