<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Gray_1"
    tools:context=".intro.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:contentDescription="@string/DC_login_logo"
        android:src="@drawable/login_app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/estedad_bold"
        android:text="@string/register"
        android:textColor="#353535"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/estedad_medium"
        android:text="@string/enteNumber"
        android:textColor="#717171"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_phoneNumber"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="320dp"
        android:layout_height="75dp"
        android:layout_marginTop="24dp"
        android:focusable="true"
        android:hint="@string/phoneNumber"
        app:boxStrokeColor="@color/Primary"
        app:hintTextColor="@color/Primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:fontFamily="@font/estedad_medium"
            android:inputType="number"
            android:maxLength="11" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_sendCode"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/Primary"
        android:fontFamily="@font/estedad_medium"
        android:text="@string/send_code"
        app:cornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_phoneNumber" />

    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sendCode">

        <TextView
            android:id="@+id/textView_privacy"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:fontFamily="@font/estedad_medium"
            android:text="@string/privacy_text"
            android:textColor="#353535"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkbox_privacy"
            android:layout_width="30dp"
            android:layout_height="18dp"
            app:buttonTint="@color/Primary" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>