<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_gravity="end"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="12dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end"
        android:orientation="horizontal">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/firstRow"
                    android:layout_width="match_parent"
                    android:layout_height="19dp"
                    android:gravity="center_vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/txt_menuFoodDis"
                        android:layout_width="32dp"
                        android:layout_height="19dp"
                        android:background="@drawable/background_discount"
                        android:fontFamily="@font/estedad_medium"
                        android:gravity="center"
                        android:text="@string/food_discount"
                        android:textColor="@color/Error"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                    <TextView
                        android:id="@+id/txt_food_discount_sum"
                        android:layout_width="wrap_content"
                        android:layout_height="19dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="15dp"
                        android:fontFamily="@font/estedad_medium"
                        android:text="@string/food_dis_sum"
                        android:textColor="@color/Gray_5"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                    <TextView
                        android:id="@+id/txt_menufoodName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/estedad_medium"
                        android:text="@string/food_name"
                        android:textColor="@color/Gray_8"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="19dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/firstRow">

                    <TextView
                        android:id="@+id/txt_menuFoodPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="19dp"
                        android:fontFamily="@font/estedad_medium"
                        android:text="@string/food_price"
                        android:textColor="@color/Gray_8"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                    <TextView
                        android:id="@+id/txt_menuFoodDesc"
                        android:layout_width="match_parent"
                        android:layout_height="19dp"
                        android:layout_marginStart="4dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/estedad_medium"
                        android:maxLines="1"
                        android:text="@string/sample_for_food_sesc"
                        android:textColor="@color/Gray_8"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_marginTop="4dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

                    <Button
                        android:id="@+id/btn_menuAddToShoppingCard"
                        android:layout_width="100dp"
                        android:layout_height="32dp"
                        android:backgroundTint="@color/Primary"
                        android:fontFamily="@font/estedad_medium"
                        android:padding="1dp"
                        android:text="@string/add_to_shopping_card"
                        android:textSize="10sp"
                        app:cornerRadius="4dp"
                        tools:ignore="SmallSp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|right"
                        android:orientation="horizontal"
                        tools:ignore="RtlHardcoded">

                        <LinearLayout
                            android:layout_width="80dp"
                            android:layout_height="16dp"
                            android:layout_marginStart="8dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="16dp"
                                android:layout_height="16dp"
                                android:contentDescription="@string/CD_faqs"
                                android:src="@drawable/star_rate" />

                            <ImageView
                                android:layout_width="16dp"
                                android:layout_height="16dp"
                                android:contentDescription="@string/CD_faqs"
                                android:src="@drawable/star_rate" />

                            <ImageView
                                android:layout_width="16dp"
                                android:layout_height="16dp"
                                android:contentDescription="@string/CD_faqs"
                                android:src="@drawable/star_rate" />

                            <ImageView
                                android:layout_width="16dp"
                                android:layout_height="16dp"
                                android:contentDescription="@string/CD_faqs"
                                android:src="@drawable/star_rate" />

                            <ImageView
                                android:layout_width="16dp"
                                android:layout_height="16dp"
                                android:contentDescription="@string/CD_faqs"
                                android:src="@drawable/star_rate" />

                        </LinearLayout>

                        <ImageView
                            android:id="@+id/btn_menuAddToFavorite"
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:layout_marginStart="8dp"
                            android:contentDescription="@string/CD_addToFavorite"
                            android:src="@drawable/app_heart" />


                    </LinearLayout>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:layout_width="92dp"
            android:layout_height="100dp"
            android:contentDescription="@string/CD_foodImage"
            android:src="@color/Gray_7" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>